--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ header a {
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)) , url(frankfurt-am-main.jpeg);
 }
 
+.pacmanimg {
+    max-width: 50%;
+    max-height: 50%;
+}
+
 #eye-excercise {
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)) , url(frankfurt-am-main.jpeg);
 }
