--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     margin-top: 60px;
-    font-family: 'Germania One', cursive;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
 }
 
@@ -36,7 +36,7 @@ section {
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: 'Germania One', cursive;
+    font-family: 'Times New Roman', Times, serif;
 
     background-size: cover;
     background-position: center center;
